[package]
name = "memtrace-log-view"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
eyre = "0.6.8"
clap = { version = "4.4.13", features = ["derive"] }
serde = { version = "1.0.158", features = ["derive"] }
toml = "0.7.3"
chrono = "0.4"
regex = "1"

